bug fix: width not aligned

--- a/src/thanossnap.css
+++ b/src/thanossnap.css
@@ -7,16 +7,15 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #ddd;
+  overflow-x: hidden;
 }
 .content {
   display: flex;
   align-items: center;
   flex-direction: column;
-  background: #ddd;
 }
 #snap-btn {
-  font-size: 36px;
+  font-size: 20px;
   padding: 20px 40px 20px 80px ;
   margin-top: 30px;
   border-radius: 10px;
@@ -25,4 +24,8 @@ body {
 }
 .dust {
   position: absolute;
+}
+.canvas_container {
+  position: absolute;
+  top: 0px;
 }
